# joy-max

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  comparison.md
examples/: prelude.dsp
help/: dsp_graph~.maxhelp  joy.maxhelp  joy~.maxhelp
source/projects/dsp_graph_tilde/: CMakeLists.txt  dsp_graph_tilde.c
source/projects/joy_core/: CMakeLists.txt  joy_max_bridge.h
source/projects/joy_object/: CMakeLists.txt  joy_object.c
source/projects/joy_tilde/: CMakeLists.txt  dsp_graph.c  dsp_graph.h  joy_tilde.c
source/projects/libdsp/: CMakeLists.txt  dsp_graph.c  dsp_graph.h  test_dsp_graph.c
